@@ -1,4 +1,5 @@
 May 06, 2015 - chris ---------------------------------------------------
+o C++ API no longer throws exceptions in destructors (thanks, Michael Möllney)
 o issue #49: fixed approx. matching issue with remote server
 
 May 04, 2015 - chris ---------------------------------------------------
@@ -6,6 +7,10 @@ o issue #53: fixed race condition on Win32
 
 Apr 06, 2015 - chris ---------------------------------------------------
 o issue #52: fixed cursor iteration w/ txns and approx matching
+o issue #50: removing problematic debug checks
+
+Apr 04, 2015 - chris ---------------------------------------------------
+o Add InsertRecNo method to hamsterdb-dotnet (thanks, mjmckp)
 
 Mar 06, 2015 - chris ---------------------------------------------------
                       release of hamsterdb-2.1.10
